# learning-ckb-fundamentals

./: .gitignore  README.md
docs/plans/: 2026-03-02-ckb-learning-platform-design.md  2026-03-02-implementation-plan.md
lessons/01-cell-model-explorer/: README.md  package.json
lessons/01-cell-model-explorer/src/: index.ts
lessons/02-transaction-anatomy/: README.md  package.json
lessons/02-transaction-anatomy/src/: index.ts
lessons/03-capacity-calculator/: README.md  package.json  tsconfig.json
lessons/03-capacity-calculator/src/: index.ts
lessons/04-dev-environment-setup/: README.md  package.json  tsconfig.json
lessons/04-dev-environment-setup/src/: index.ts  setup-check.ts
lessons/05-first-transfer/: README.md  package.json  tsconfig.json
lessons/05-first-transfer/src/: index.ts
lessons/06-cell-explorer/: README.md  package.json
lessons/06-cell-explorer/src/: index.ts  utils.ts
lessons/07-script-basics/: README.md  package.json  tsconfig.json
lessons/07-script-basics/src/: index.ts
lessons/08-hash-lock-script/: Makefile  README.md
lessons/08-hash-lock-script/contracts/hash-lock/: Cargo.toml
lessons/08-hash-lock-script/contracts/hash-lock/src/: main.rs
lessons/08-hash-lock-script/scripts/: package.json
lessons/08-hash-lock-script/scripts/src/: index.ts
lessons/09-script-debugging/: README.md
lessons/09-script-debugging/contracts/buggy-lock/: Cargo.toml
lessons/09-script-debugging/contracts/buggy-lock/src/: main.rs
lessons/09-script-debugging/contracts/fixed-lock/: Cargo.toml
lessons/09-script-debugging/contracts/fixed-lock/src/: main.rs
lessons/09-script-debugging/scripts/: package.json
lessons/09-script-debugging/scripts/src/: error-guide.ts  index.ts
lessons/10-type-script-counter/: README.md
lessons/10-type-script-counter/contracts/counter/: Cargo.toml
lessons/10-type-script-counter/contracts/counter/src/: main.rs
lessons/10-type-script-counter/scripts/: package.json
lessons/10-type-script-counter/scripts/src/: index.ts
lessons/11-molecule-serialization/: README.md
lessons/11-molecule-serialization/contracts/molecule-demo/: Cargo.toml
lessons/11-molecule-serialization/contracts/molecule-demo/src/: main.rs
lessons/11-molecule-serialization/schemas/: custom.mol
lessons/11-molecule-serialization/scripts/: package.json
lessons/11-molecule-serialization/scripts/src/: index.ts  molecule-types.ts
lessons/12-ckb-vm-deep-dive/: README.md
lessons/12-ckb-vm-deep-dive/contracts/crypto-benchmark/: Cargo.toml
lessons/12-ckb-vm-deep-dive/contracts/crypto-benchmark/src/: main.rs
lessons/12-ckb-vm-deep-dive/contracts/simple-math/: Cargo.toml
lessons/12-ckb-vm-deep-dive/contracts/simple-math/src/: main.rs
lessons/12-ckb-vm-deep-dive/scripts/: package.json
lessons/12-ckb-vm-deep-dive/scripts/src/: index.ts
lessons/13-xudt-tokens/: README.md  package.json
lessons/13-xudt-tokens/src/: index.ts  xudt-helpers.ts
lessons/14-spore-nfts/: README.md  package.json
lessons/14-spore-nfts/src/: index.ts
lessons/15-omnilock-wallet/: README.md  package.json
lessons/15-omnilock-wallet/src/: index.ts
lessons/16-composability-patterns/: README.md  package.json
lessons/16-composability-patterns/src/: index.ts
lessons/17-cell-management/: README.md  package.json
lessons/17-cell-management/src/: index.ts
lessons/18-rpc-dashboard/: README.md  package.json
lessons/18-rpc-dashboard/src/: index.ts  rpc-client.ts
lessons/19-full-node-setup/: README.md  package.json
lessons/19-full-node-setup/scripts/: setup.sh
lessons/19-full-node-setup/src/: index.ts
lessons/20-light-client-app/: README.md  package.json
lessons/20-light-client-app/src/: index.ts
lessons/21-rgbpp-explorer/: README.md  package.json
lessons/21-rgbpp-explorer/src/: index.ts
lessons/22-token-dex/: README.md  package.json
lessons/22-token-dex/src/: dex-helpers.ts  index.ts
lessons/23-nft-marketplace/: README.md  package.json
lessons/23-nft-marketplace/src/: index.ts  marketplace-logic.ts
lessons/24-mainnet-deployment/: README.md  package.json
lessons/24-mainnet-deployment/scripts/: deploy-checklist.md
lessons/24-mainnet-deployment/src/: index.ts  security-checklist.ts
website/: .env.example  package-lock.json  package.json
website/src/app/: globals.css  layout.tsx  page.tsx
website/src/app/dashboard/: page.tsx
website/src/app/lessons/: page.tsx
website/src/components/: ccc-provider.tsx  code-block.tsx  dashboard-content.tsx  footer.tsx  header.tsx  lesson-progress-card.tsx  lesson-progress-controls.tsx  lesson-sidebar.tsx  progress-bar.tsx  providers.tsx  quiz-card.tsx  quiz-view.tsx  theme-toggle.tsx  wallet-connect.tsx
website/src/content/: 01-cell-model-explorer.mdx  02-transaction-anatomy.mdx  03-capacity-calculator.mdx  04-dev-environment-setup.mdx  05-first-transfer.mdx  06-cell-explorer.mdx  07-script-basics.mdx  08-hash-lock-script.mdx  09-script-debugging.mdx  10-type-script-counter.mdx  11-molecule-serialization.mdx  12-ckb-vm-deep-dive.mdx  13-xudt-tokens.mdx  14-spore-nfts.mdx  15-omnilock-wallet.mdx  16-composability-patterns.mdx  17-cell-management.mdx  18-rpc-dashboard.mdx  19-full-node-setup.mdx  20-light-client-app.mdx  21-rgbpp-explorer.mdx  22-token-dex.mdx  23-nft-marketplace.mdx  24-mainnet-deployment.mdx
website/src/content/quizzes/: 01-cell-model-explorer.json  02-transaction-anatomy.json  03-capacity-calculator.json  04-dev-environment-setup.json  05-first-transfer.json  06-cell-explorer.json  07-script-basics.json  08-hash-lock-script.json  09-script-debugging.json  10-type-script-counter.json  11-molecule-serialization.json  12-ckb-vm-deep-dive.json  13-xudt-tokens.json  14-spore-nfts.json  15-omnilock-wallet.json  16-composability-patterns.json  17-cell-management.json  18-rpc-dashboard.json  19-full-node-setup.json  20-light-client-app.json  21-rgbpp-explorer.json  22-token-dex.json  23-nft-marketplace.json  24-mainnet-deployment.json
website/src/contexts/: auth-context.tsx
website/src/lib/content/: lessons-data.ts  loader.ts  types.ts
website/src/lib/db/: queries.ts  schema.ts
(+8 files in other folders)
